Fixed the span in StoriesFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="sent">Sent</string>
     <string name="received">Received</string>
     <string name="opened">Opened</string>
-    <string name="stories">Stories</string>
+    <string name="stories">Stories for space</string>
 </resources>
